// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home get controller: GET / should return the correct resource /email 1`] = `
Object {
  "data": "your@email.com",
}
`;

exports[`Home get controller: GET / should return the correct resource /jobs 1`] = `
Object {
  "data": Array [
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "hybrid",
      },
      "company": "The Knot Worldwide",
      "date": Object {
        "from": Object {
          "month": "Apr",
          "year": "2025",
        },
        "to": Object {
          "month": "current",
          "year": "current",
        },
      },
      "description": "I continue to work as a servant leader, but I also help my Team grow in their professional careers, doing reviews, O3 mettings and other management tasks.

			Stack: NextJS, Node, React, AWS, Akamai, Docker, Kubernetes, Cypress, Github, Redis, MySql, CI/CD...
			",
      "keywords": Array [
        "nextjs",
        "node",
        "react",
        "aws",
        "akamai",
        "docker",
        "kubernetes",
        "cypress",
        "github",
        "leadership",
        "redis",
        "mysql",
        "ci/cd",
        "management",
      ],
      "promotion": true,
      "title": "Engineering Manager (hands-on) & Lead Software Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "The Knot Worldwide",
      "date": Object {
        "from": Object {
          "month": "Dec",
          "year": "2023",
        },
        "to": Object {
          "month": "Apr",
          "year": "2025",
        },
      },
      "description": "Servant Leader supporting my squad and anybody around me.
			Improve productivity by automating the process as much as possible, guiding and driving best practices under a pragmatic mindset.

			Stack: NextJS, Node, React, AWS, Akamai, Docker, Kubernetes, Cypress, Github, Redis, MySql, CI/CD...
			",
      "keywords": Array [
        "nextjs",
        "node",
        "react",
        "aws",
        "akamai",
        "docker",
        "kubernetes",
        "cypress",
        "github",
        "leadership",
        "redis",
        "mysql",
        "ci/cd",
      ],
      "title": "Lead Software Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "MySelf",
      "date": Object {
        "from": Object {
          "month": "jun",
          "year": "2021",
        },
        "to": Object {
          "month": "current",
          "year": "current",
        },
      },
      "description": "Consultant, Site projects, Learning and Mentoring

			Stack: Vue2, Vue3(pinia + TS), NuxtJS, NextJS, Jest, Testing Library, Cypress, Playwright, NodeJS+TS, Angular, React+TS, Docker, Vite, SockerIO, MongoDB, Redis, ...
			",
      "keywords": Array [
        "vue",
        "vue3",
        "pinia",
        "typescript",
        "nuxt",
        "next",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "node",
        "angular",
        "docker",
        "vite",
        "socketio",
        "mongodb",
        "mysql",
        "redis",
        "cloudflare",
        "learning",
      ],
      "title": "Full Stack Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "BackMarket",
      "date": Object {
        "from": Object {
          "month": "august",
          "year": "2021",
        },
        "to": Object {
          "month": "march",
          "year": "2023",
        },
      },
      "description": "Helping to deliver quality features, promoting good testing practices and working in performance. Involved in big migration projects for next company challenge.

			Stack: Vue2, Nuxt, Jest, Testing Library...",
      "keywords": Array [
        "vue2",
        "vuex",
        "nuxt",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "SOLID",
        "cloudflare",
        "learning",
      ],
      "title": "Senior Frontend Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": null,
      },
      "company": null,
      "date": Object {
        "from": Object {
          "month": "february",
          "year": "2020",
        },
        "to": Object {
          "month": "august",
          "year": "2021",
        },
      },
      "description": "Personal break to focus in my mental health, think, study and work on my side projects and open-source. Self-training to improve as a professional and to be ready for the next challenge.",
      "keywords": Array [
        "learning",
      ],
      "title": "Sabbatical Gap",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "office",
      },
      "company": "Ubeeqo (Europcar Mobility Group)",
      "date": Object {
        "from": Object {
          "month": "november",
          "year": "2017",
        },
        "to": Object {
          "month": "february",
          "year": "2020",
        },
      },
      "description": "Ubeeqo is one of the products of Europcar Mobility Group. I joined the company as a Frontend developer, I was promoted to be the responsible of all the web applications for Ubeeqo as a Frontend Manager/Lead.

			I grew the team from 4 to ~14 Frontend developers, while the company grew from ~15 to ~140 employees just in 2 years in Barcelona HUB.

			- Work in cross functional decissions
			- Define the frontend architecture for all web products in the company.
			- Define the UX interactions with layouts and components.
			- Define components library based in Vuejs.
			- Managed the Agile development process from specification to completion.
			- Define the pipeline test.
			- Develop and define e2e implementation.
			- Recruiting frontend and QA team.

			Stack: vanilla js, vue (v2.x), vuex, sass, nuxt, nightwatch and cypress, jest, webpack, nodejs, babel, rollup, docker, scrum.",
      "keywords": Array [
        "vue",
        "docker",
        "lidership",
        "nightwatch",
        "cypress",
        "jest",
        "testing nodejs",
        "scrum",
        "nuxt",
        "management",
        "learning",
      ],
      "title": "Engineering Manager (hands-on) & Lead Frontend Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "office",
      },
      "company": "",
      "date": Object {
        "from": Object {
          "month": "-",
          "year": "2011",
        },
        "to": Object {
          "month": "-",
          "year": "2015",
        },
      },
      "description": "I started as a back-end developer working with PHP, hen moved to full-stack development with Node.js and finally focused on front-end development. During these years I was able to solve many problems in different environments and adapting to different technologies.

			Worked Trovit, BeRepublic, FocusOnEmotions, Zyncro, Stuart Delivery and Instaply,

			Used JS, AngularJS, ReactJS, NodeJS, CSS, Stylus, Grunt, Gulp, Npm, CI, Scrum methodology and SOLID practices, SockerIO, PHP, ...",
      "keywords": Array [
        "php",
        "jquery",
        "nodejs",
        "angularjs",
        "npm",
        "ci",
        "scrum",
        "SOLID",
        "socketIO",
      ],
      "title": "Previous experiences",
    },
  ],
}
`;

exports[`Home get controller: GET / should return the correct resource /jobs with a correct filter 1`] = `
Object {
  "data": Array [
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "MySelf",
      "date": Object {
        "from": Object {
          "month": "jun",
          "year": "2021",
        },
        "to": Object {
          "month": "current",
          "year": "current",
        },
      },
      "description": "Consultant, Site projects, Learning and Mentoring

			Stack: Vue2, Vue3(pinia + TS), NuxtJS, NextJS, Jest, Testing Library, Cypress, Playwright, NodeJS+TS, Angular, React+TS, Docker, Vite, SockerIO, MongoDB, Redis, ...
			",
      "keywords": Array [
        "vue",
        "vue3",
        "pinia",
        "typescript",
        "nuxt",
        "next",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "node",
        "angular",
        "docker",
        "vite",
        "socketio",
        "mongodb",
        "mysql",
        "redis",
        "cloudflare",
        "learning",
      ],
      "title": "Full Stack Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "BackMarket",
      "date": Object {
        "from": Object {
          "month": "august",
          "year": "2021",
        },
        "to": Object {
          "month": "march",
          "year": "2023",
        },
      },
      "description": "Helping to deliver quality features, promoting good testing practices and working in performance. Involved in big migration projects for next company challenge.

			Stack: Vue2, Nuxt, Jest, Testing Library...",
      "keywords": Array [
        "vue2",
        "vuex",
        "nuxt",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "SOLID",
        "cloudflare",
        "learning",
      ],
      "title": "Senior Frontend Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "office",
      },
      "company": "Ubeeqo (Europcar Mobility Group)",
      "date": Object {
        "from": Object {
          "month": "november",
          "year": "2017",
        },
        "to": Object {
          "month": "february",
          "year": "2020",
        },
      },
      "description": "Ubeeqo is one of the products of Europcar Mobility Group. I joined the company as a Frontend developer, I was promoted to be the responsible of all the web applications for Ubeeqo as a Frontend Manager/Lead.

			I grew the team from 4 to ~14 Frontend developers, while the company grew from ~15 to ~140 employees just in 2 years in Barcelona HUB.

			- Work in cross functional decissions
			- Define the frontend architecture for all web products in the company.
			- Define the UX interactions with layouts and components.
			- Define components library based in Vuejs.
			- Managed the Agile development process from specification to completion.
			- Define the pipeline test.
			- Develop and define e2e implementation.
			- Recruiting frontend and QA team.

			Stack: vanilla js, vue (v2.x), vuex, sass, nuxt, nightwatch and cypress, jest, webpack, nodejs, babel, rollup, docker, scrum.",
      "keywords": Array [
        "vue",
        "docker",
        "lidership",
        "nightwatch",
        "cypress",
        "jest",
        "testing nodejs",
        "scrum",
        "nuxt",
        "management",
        "learning",
      ],
      "title": "Engineering Manager (hands-on) & Lead Frontend Engineer",
    },
  ],
}
`;

exports[`Home get controller: GET / should return the correct resource /name 1`] = `
Object {
  "data": "Dimas",
}
`;

exports[`Home get controller: GET / should return the correct resource /phone 1`] = `
Object {
  "data": "+34 000 000 000",
}
`;

exports[`Home get controller: GET / should return the full data by default 1`] = `
Object {
  "alias": "dimaslz",
  "baseOn": Object {
    "city": "Barcelona",
    "country": "Spain",
  },
  "coverLetter": "I am a passionate technology professional with over a decade of experience in Full Stack development. I bring an entrepreneurial spirit and a continuous drive for learning to each project I undertake.

	In my quest for new challenges, I actively engage in side projects that sharpen my skills and expand my understanding of emerging technologies.

	My ability to empathize with team needs and grasp the holistic view of our products allows me to contribute effectively to our collective goals. Through a supportive and positive approach, I not only enhance the codebase but also the team dynamic.

	As a previous leader of around 14-member development team, I've spearheaded initiatives to optimize team support and company productivity. My proactive stance on problem-solving, coupled with a pragmatic balance between best practices and practical value, has consistently led to improvements in product quality.

	In my previous positions, I faced challenges from the front line as a leader of around 14 developers, aiming to provide the best support to the teams and the company. I am proactive in finding solutions and making product improvements without waiting for instructions, always validating changes with the team. I strive to provide solutions while maintaining a pragmatic mindset, finding the balance between best practices, value and quality.

	With a history of working in diverse, cross-functional teams, I am well-prepared for remote collaboration. My core values include empathy, transparency, and a willingness to both mentor and learn.

	I am excited about the possibility of bringing my blend of experience, innovation, and collaborative spirit to the company. I look forward to the opportunity to discuss how my background, skills, and enthusiasms can contribute to your exciting product.",
  "education": Array [
    Object {
      "baseOn": Object {
        "city": "Santa Cruz de Tenerife",
        "country": "Spain",
      },
      "date": Object {
        "from": Object {
          "month": "-",
          "year": "2009",
        },
        "to": Object {
          "month": "-",
          "year": "2011",
        },
      },
      "description": "Learning database management and software development in python, java and visual basic",
      "title": "Associate's Degree in Software Development",
    },
  ],
  "email": undefined,
  "formerJobs": Array [
    "Trovit",
    "BeRepublic",
    "FocusOnEmotions",
    "Zyncro",
    "Instaply",
    "Ubeeqo/Europcar Mobility Group",
  ],
  "interests": "Entrepreneurship, business, web development, mobile, backend, devops, product, management, ...",
  "introduction": "Enthusiastic self-taught and crazy about technology, I work in web technologies since 2011, today mainly focused on frontend technologies but also enjoying backend and mobile environments in side projects.

		I like innovation, entrepreneurial mindset and business stories. Learning, discovering, sharing and helping are the keys to my daily motivation.

		My top topics are cloud platforms, SAAS, tooling development, open source, learning, automation, React, Vue, Angular, Svelte, Typescript, Kubernetes, Docker, Github Actions, AWS, Testing (unit, integration, e2e), nodejs and more. I'm open to listen, learn and code!",
  "jobs": Array [
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "hybrid",
      },
      "company": "The Knot Worldwide",
      "date": Object {
        "from": Object {
          "month": "Apr",
          "year": "2025",
        },
        "to": Object {
          "month": "current",
          "year": "current",
        },
      },
      "description": "I continue to work as a servant leader, but I also help my Team grow in their professional careers, doing reviews, O3 mettings and other management tasks.

			Stack: NextJS, Node, React, AWS, Akamai, Docker, Kubernetes, Cypress, Github, Redis, MySql, CI/CD...
			",
      "keywords": Array [
        "nextjs",
        "node",
        "react",
        "aws",
        "akamai",
        "docker",
        "kubernetes",
        "cypress",
        "github",
        "leadership",
        "redis",
        "mysql",
        "ci/cd",
        "management",
      ],
      "promotion": true,
      "title": "Engineering Manager (hands-on) & Lead Software Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "The Knot Worldwide",
      "date": Object {
        "from": Object {
          "month": "Dec",
          "year": "2023",
        },
        "to": Object {
          "month": "Apr",
          "year": "2025",
        },
      },
      "description": "Servant Leader supporting my squad and anybody around me.
			Improve productivity by automating the process as much as possible, guiding and driving best practices under a pragmatic mindset.

			Stack: NextJS, Node, React, AWS, Akamai, Docker, Kubernetes, Cypress, Github, Redis, MySql, CI/CD...
			",
      "keywords": Array [
        "nextjs",
        "node",
        "react",
        "aws",
        "akamai",
        "docker",
        "kubernetes",
        "cypress",
        "github",
        "leadership",
        "redis",
        "mysql",
        "ci/cd",
      ],
      "title": "Lead Software Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "MySelf",
      "date": Object {
        "from": Object {
          "month": "jun",
          "year": "2021",
        },
        "to": Object {
          "month": "current",
          "year": "current",
        },
      },
      "description": "Consultant, Site projects, Learning and Mentoring

			Stack: Vue2, Vue3(pinia + TS), NuxtJS, NextJS, Jest, Testing Library, Cypress, Playwright, NodeJS+TS, Angular, React+TS, Docker, Vite, SockerIO, MongoDB, Redis, ...
			",
      "keywords": Array [
        "vue",
        "vue3",
        "pinia",
        "typescript",
        "nuxt",
        "next",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "node",
        "angular",
        "docker",
        "vite",
        "socketio",
        "mongodb",
        "mysql",
        "redis",
        "cloudflare",
        "learning",
      ],
      "title": "Full Stack Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "remote",
      },
      "company": "BackMarket",
      "date": Object {
        "from": Object {
          "month": "august",
          "year": "2021",
        },
        "to": Object {
          "month": "march",
          "year": "2023",
        },
      },
      "description": "Helping to deliver quality features, promoting good testing practices and working in performance. Involved in big migration projects for next company challenge.

			Stack: Vue2, Nuxt, Jest, Testing Library...",
      "keywords": Array [
        "vue2",
        "vuex",
        "nuxt",
        "jest",
        "testing library",
        "playwright",
        "cypress",
        "SOLID",
        "cloudflare",
        "learning",
      ],
      "title": "Senior Frontend Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": null,
      },
      "company": null,
      "date": Object {
        "from": Object {
          "month": "february",
          "year": "2020",
        },
        "to": Object {
          "month": "august",
          "year": "2021",
        },
      },
      "description": "Personal break to focus in my mental health, think, study and work on my side projects and open-source. Self-training to improve as a professional and to be ready for the next challenge.",
      "keywords": Array [
        "learning",
      ],
      "title": "Sabbatical Gap",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "office",
      },
      "company": "Ubeeqo (Europcar Mobility Group)",
      "date": Object {
        "from": Object {
          "month": "november",
          "year": "2017",
        },
        "to": Object {
          "month": "february",
          "year": "2020",
        },
      },
      "description": "Ubeeqo is one of the products of Europcar Mobility Group. I joined the company as a Frontend developer, I was promoted to be the responsible of all the web applications for Ubeeqo as a Frontend Manager/Lead.

			I grew the team from 4 to ~14 Frontend developers, while the company grew from ~15 to ~140 employees just in 2 years in Barcelona HUB.

			- Work in cross functional decissions
			- Define the frontend architecture for all web products in the company.
			- Define the UX interactions with layouts and components.
			- Define components library based in Vuejs.
			- Managed the Agile development process from specification to completion.
			- Define the pipeline test.
			- Develop and define e2e implementation.
			- Recruiting frontend and QA team.

			Stack: vanilla js, vue (v2.x), vuex, sass, nuxt, nightwatch and cypress, jest, webpack, nodejs, babel, rollup, docker, scrum.",
      "keywords": Array [
        "vue",
        "docker",
        "lidership",
        "nightwatch",
        "cypress",
        "jest",
        "testing nodejs",
        "scrum",
        "nuxt",
        "management",
        "learning",
      ],
      "title": "Engineering Manager (hands-on) & Lead Frontend Engineer",
    },
    Object {
      "baseOn": Object {
        "city": "Barcelona",
        "country": "Spain",
        "mode": "office",
      },
      "company": "",
      "date": Object {
        "from": Object {
          "month": "-",
          "year": "2011",
        },
        "to": Object {
          "month": "-",
          "year": "2015",
        },
      },
      "description": "I started as a back-end developer working with PHP, hen moved to full-stack development with Node.js and finally focused on front-end development. During these years I was able to solve many problems in different environments and adapting to different technologies.

			Worked Trovit, BeRepublic, FocusOnEmotions, Zyncro, Stuart Delivery and Instaply,

			Used JS, AngularJS, ReactJS, NodeJS, CSS, Stylus, Grunt, Gulp, Npm, CI, Scrum methodology and SOLID practices, SockerIO, PHP, ...",
      "keywords": Array [
        "php",
        "jquery",
        "nodejs",
        "angularjs",
        "npm",
        "ci",
        "scrum",
        "SOLID",
        "socketIO",
      ],
      "title": "Previous experiences",
    },
  ],
  "keywords": Array [
    "javascript",
    "vue",
    "react",
    "angular",
    "nodejs+express",
    "nest",
    "software",
    "android",
    "ios",
    "react native",
    "svelte",
    "github actions",
    "aws",
    "testing library",
    "SAAS",
    "open source",
    "tooling",
    "learning",
    "kubernetes",
    "docker",
    "tailwindcss",
    "management",
    "leadership",
  ],
  "lastname": "López Zurita",
  "name": "Dimas",
  "network": Object {
    "github": "https://github.com/dimaslz",
    "linkedin": "https://www.linkedin.com/in/dimaslopezzurita",
    "twitter": "https://twitter.com/dimaslz",
  },
  "phone": undefined,
  "projects": Array [
    Object {
      "description": "An Angular components library to use Heroicons.com in your Angular projects.",
      "keywords": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "library",
        "components",
        "tailwindcss",
        "npm",
      ],
      "name": "ng-heroicons",
      "npm": "https://www.npmjs.com/package/@dimaslz/ng-heroicons",
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/ng-heroicons",
      ],
      "stack": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "tailwindcss",
      ],
      "url": "https://ng-heroicons.dimaslz.dev",
    },
    Object {
      "description": "A tool to create mock Api responses with your custom schema.",
      "keywords": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tools",
        "api",
        "tailwindcss",
      ],
      "name": "Randomdata",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tailwindcss",
      ],
      "url": "https://randomdata.loremapi.io",
    },
    Object {
      "description": "A tool to create a framework icon component from a SVG",
      "keywords": Array [
        "nextjs",
        "nodejs",
        "tailwindcss",
        "tools",
      ],
      "name": "Framework icon builder",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "nextjs",
        "nodejs",
        "tailwindcss",
      ],
      "url": "https://svg-icon-2-fw-component.dimaslz.dev",
    },
    Object {
      "description": "Deploy any project easily, like Vercel or Heroku but in your self hosting.",
      "keywords": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "tools",
        "github actions",
      ],
      "name": "Fito deploy",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "github actions",
      ],
      "url": "https://fito-deploy.dimaslz.dev",
    },
    Object {
      "description": "Mock and document your Api's",
      "keywords": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
        "tools",
        "api",
        "developers",
      ],
      "name": "Loremapi",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://loremapi.io",
    },
    Object {
      "description": "My online CV",
      "keywords": Array [
        "svelte",
        "tailwindcss",
        "typescript",
        "cv",
        "landing",
      ],
      "name": "cv.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-cv",
      ],
      "stack": Array [
        "svelte",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://cv.dimaslz.dev",
    },
    Object {
      "description": "My professional info by API",
      "keywords": Array [
        "nodejs",
        "typescript",
        "cv",
        "api",
      ],
      "name": "api.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-api",
      ],
      "stack": Array [
        "nodejs",
        "typescript",
      ],
      "url": "https://api.dimaslz.dev",
    },
    Object {
      "description": "Dev landing",
      "keywords": Array [
        "javascript",
        "tailwindcss",
        "landing",
      ],
      "name": "dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz.io-landing",
      ],
      "stack": Array [
        "javascript",
        "tailwindcss",
      ],
      "url": "https://dimaslz.dev",
    },
    Object {
      "description": "Profesional landing profile",
      "keywords": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "name": "dimaslz.com",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz.io",
      ],
      "stack": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "url": "https://dimaslz.com",
    },
  ],
  "status": Array [
    "Working at MySelf: open as freelance, mentor and consultant",
  ],
  "title": "Senior Software Engineer",
}
`;
